# rust-experiments

./: LICENSE  README.md
cargo-book/: ReadMe.md
cargo-book/2-guide/dependencies/: Cargo.toml
cargo-book/2-guide/dependencies-git/: Cargo.toml
cargo-book/3-ref/environment-variable/: Cargo.toml
cargo-book/3-ref/features/: Cargo.toml
cargo-book/3-ref/hello-from-generated-code/: Cargo.toml  build.rs
cargo-book/3-ref/my-binary/: Cargo.toml
cargo-book/3-ref/my-library/: Cargo.toml
cargo-book/3-ref/profile/: Cargo.toml
cargo-book/3-ref/workspace/: Cargo.toml
cargo-book/3-ref/workspace/hello_world/: Cargo.toml
cargo-book/3-ref/workspace/path/member1/: Cargo.toml
cargo-book/3-ref/workspace/path/member2/: Cargo.toml
cargo-book/4-command/: BuildCommands.md  ManifestCommand.md  PackageCommand.md
cargo-book/4-command/example/: Cargo.toml
cargo-book/4-command/example-init/: Cargo.toml
cargo-book/4-command/example/src/: lib.rs
mini_crawler/: Cargo.toml  ReadMe.md
mini_crawler/src/: crawler.rs  lib.rs  main.rs
my-config/: ReadMe.md  config.toml
nom-example/: Cargo.toml  ReadMe.md
nom-example/src/: main.rs
rust-cookbook/: ReadMe.md
rust-cookbook/1-algorithm/random/: Cargo.toml
rust-cookbook/10-encode/complex-1/: Cargo.toml
rust-cookbook/10-encode/complex-2/: Cargo.toml
rust-cookbook/10-encode/complex-3/: Cargo.toml
rust-cookbook/10-encode/csv-example/: Cargo.toml
rust-cookbook/10-encode/strings/: Cargo.toml
rust-cookbook/11-error-handling/error-chain-example/: Cargo.toml
rust-cookbook/11-error-handling/error-chain-example-2/: Cargo.toml
rust-cookbook/11-error-handling/error-chain-example-3/: Cargo.toml
rust-cookbook/12-file/dir/: Cargo.toml
rust-cookbook/12-file/dir-loops/: Cargo.toml
rust-cookbook/12-file/glob-example/: Cargo.toml
rust-cookbook/12-file/read-write/: Cargo.toml  new.txt
rust-cookbook/12-file/recursive/: Cargo.toml
rust-cookbook/13-processor/num-cpus-example/: Cargo.toml
rust-cookbook/14-memory/lazy-example/: Cargo.toml
rust-cookbook/15-network/net-example/: Cargo.toml
rust-cookbook/16-os/external2/: Cargo.toml
rust-cookbook/16-os/external3/: Cargo.toml
rust-cookbook/16-os/external4/: Cargo.toml
rust-cookbook/17-math/big/: Cargo.toml
rust-cookbook/17-math/complex-number/: Cargo.toml
rust-cookbook/17-math/linear-algebra/: Cargo.toml
rust-cookbook/18-text/regex-example/: Cargo.toml
rust-cookbook/18-text/string-parse/: Cargo.toml
rust-cookbook/19-web/api/: Cargo.toml
rust-cookbook/19-web/api-check/: Cargo.toml
rust-cookbook/19-web/base-url/: Cargo.toml
rust-cookbook/19-web/broken-link/: Cargo.toml
rust-cookbook/19-web/download-partial/: Cargo.toml
rust-cookbook/19-web/download-tmp/: Cargo.toml
rust-cookbook/19-web/extract-link/: Cargo.toml
rust-cookbook/19-web/extract-link2/: Cargo.toml
rust-cookbook/19-web/get-request/: Cargo.toml
rust-cookbook/19-web/gist/: Cargo.toml
rust-cookbook/19-web/mime-filename/: Cargo.toml
rust-cookbook/19-web/mime-http/: Cargo.toml
rust-cookbook/19-web/mime-string/: Cargo.toml
rust-cookbook/19-web/new-url/: Cargo.toml
rust-cookbook/19-web/origin-url/: Cargo.toml
rust-cookbook/19-web/pagenated/: Cargo.toml
rust-cookbook/19-web/parse-url/: Cargo.toml
rustyline-example/: Cargo.toml  ReadMe.md
rustyline-example/src/: main.rs
the-rust-programing-language/: Cargo.toml  ReadMe.md  cargoコマンドメモ.md
the-rust-programing-language/advanced_closure/: Cargo.toml
the-rust-programing-language/error_handling/: Cargo.toml
the-rust-programing-language/macros/: Cargo.toml
the-rust-programing-language/publishing_to_crates_io/: Cargo.toml  テスト公開パッケージ.url
the-rust-programing-language/publishing_to_crates_io/src/: lib.rs
(+143 files in other folders)
