[package]
name = "mini_crawler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10.8", features = ["blocking"] }
eyre = "0.6"
select = "0.5"
url = "2.3.1"
log = "0.4.17"
env_logger = "0.10.0"
thiserror = "1.0.38"
structopt = "0.3"
